# semantic-conventions-genai

./: .gitattributes  CHANGELOG.md  CONTRIBUTING.md  Makefile  PR_DESCRIPTION.md  README.md  RELEASING.md  mise.toml
.github/: LABELS.md  copilot-instructions.md  renovate.json5
.github/instructions/: changelog-fragments.instructions.md  model-style.instructions.md  reference-scenarios.instructions.md
.github/scripts/: pull-request-dashboard.py
.github/scripts/copilot-cli/: package-lock.json  package.json
.github/scripts/pull-request-dashboard/: WEBHOOK_SETUP.md  classification.py  dashboard.py  github_cli.py  notifications.py  notify_slack.py  publish_dashboard.py  render.py  state.py  state_branch.py
.github/skills/reference/: SKILL.md
.github/workflows/: ci.yml  codeql.yml  deploy-pull-request-dashboard-webhook.yml  pr-review-dashboard.yml  pull-request-dashboard.yml  release-dev.yml  scorecard.yml
changelog.d/: 107.enhancement.md  126.enhancement.md  136.bugfix.md  140.enhancement.md  142.enhancement.md  162.enhancement.md  195.component.md  211.clarification.md  212.clarification.md  214.bugfix.md  216.clarification.md  217.breaking.md  217.clarification.md  219.clarification.md  220.clarification.md  242.breaking.md  97.enhancement.md  99.enhancement.md  pyproject.toml  towncrier.toml
docs/gen-ai/: README.md  a2a.md  anthropic.md  aws-bedrock.md  azure-ai-inference.md  gen-ai-agent-spans.md  gen-ai-events.md  gen-ai-exceptions.md  gen-ai-input-messages.json  gen-ai-memory-records.json  gen-ai-metrics.md  gen-ai-output-messages.json  gen-ai-spans.md  gen-ai-system-instructions.json  mcp.md  openai.md
docs/gen-ai/non-normative/: examples-llm-calls.md  models.ipynb  models.py  pyproject.toml
docs/registry/attributes/: README.md  a2a.md  gen-ai.md
model/a2a/: common.yaml  metrics.yaml  registry.yaml  spans.yaml
model/gen-ai/: events.yaml  metrics.yaml  registry.yaml  spans.yaml
model/mcp/: common.yaml  spans.yaml
reference/: README.md  pyproject.toml
reference/reports/: create-agent-span.md  gen-ai-client-inference-operation-details-event.md  inference-span.md  invoke-agent-client-span.md  invoke-agent-internal-span.md  memory-span.md  plan-span.md  retrieval-span.md
reference/scenarios/a2a-python/: data.json  pyproject.toml  scenario.py
reference/scenarios/anthropic/: data.json  pyproject.toml  scenario.py
reference/scenarios/autogen/: scenario.py
reference/scenarios/aws-bedrock/: pyproject.toml  (+1 more)
reference/scenarios/aws-bedrock-agent/: data.json  pyproject.toml  scenario.py
reference/scenarios/deepeval/: pyproject.toml
reference/scenarios/langchain/: data.json  pyproject.toml  scenario.py
reference/scenarios/openai-agents/: data.json  pyproject.toml  scenario.py
reference/shared/: pyproject.toml
schema-snapshot/: registry.yaml
(+49 files in other folders)
