[project]
name = "deepeval-reference-test"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = [
    "deepeval==4.0.2",
    "langchain==1.3.1",
    "openai==2.37.0",
    "genai-reference-shared",
]

[tool.uv.sources]
genai-reference-shared = { path = "../../shared", editable = true }

[tool.uv]
package = false
