[project]
name = "deepeval-reference-test"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = [
    "deepeval==4.0.5",
    "langchain==1.3.2",
    "openai==2.40.0",
    "genai-reference-shared",
]

[tool.uv.sources]
genai-reference-shared = { path = "../../shared", editable = true }

[tool.uv]
package = false
