[project]
name = "langchain-reference-test"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = [
    "langchain==1.3.2",
    "langchain-experimental==0.4.2",
    "langchain-openai==1.2.2",
    "openai==2.40.0",
    "genai-reference-shared",
]

[tool.uv.sources]
genai-reference-shared = { path = "../../shared", editable = true }

[tool.uv]
package = false
