[project]
name = "openai-agents-reference-test"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = [
    "openai==2.37.0",
    "openai-agents==0.17.3",
    "genai-reference-shared",
]

[tool.uv.sources]
genai-reference-shared = { path = "../../shared", editable = true }

[tool.uv]
package = false
