[project]
name = "openai-agents-reference-test"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = [
    "openai==2.41.0",
    "openai-agents==0.17.4",
    "genai-reference-shared",
]

[tool.uv.sources]
genai-reference-shared = { path = "../../shared", editable = true }

[tool.uv]
package = false
